2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>

	* Added ChangeLog
