@@ -1,4 +1,8 @@
 2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>
 
+	* Library API improvements and documentation
+
+2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>
+
 	* Added ChangeLog
 
